force-app/main/default/objects/custom_create124__c/custom_create124__c.object-meta.xml
<CustomObject>
    <label>Custom created object124</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects124</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>