force-app/main/default/objects/custom_create124__c/fields/custom_create_124field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_124field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 124field547</label>
    <type>Checkbox</type>
</CustomField>