force-app/main/default/objects/custom_create124__c/fields/custom_create_124field591__c.field-meta.xml
<CustomField>
    <fullName>custom_create_124field591__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 124field591</label>
    <type>Checkbox</type>
</CustomField>